# query-preprocessing-workflow

./: .env.example  .gitignore  pyproject.toml  test_category_normalisation_agent.py  test_processable_entity_extraction_agent.py  test_user_intent_validation_agent.py
.claude/commands/: ask.md  debug.md
evals/: COMPARISON.md  README.md  RUNBOOK.md  __init__.py  context.py  core.py  decorators.py  evaluator.py  example.py  field_validators.py  judge.py  llm_client_config.py  registry.py  result_writer.py  runner.py  test_framework.py  utils.py  validators.py
evals/cases/: __init__.py  category_normalisation.py  pii_extraction.py  processable_entity_extraction.py  processable_entity_extraction_predicted.py  query_characteristics_extraction.py  query_security.py  sentiment_analysis.py  unprocessable_entity_extraction.py  unprocessable_entity_extraction_predicted.py  user_intent.py
evals/tests/: __init__.py  test_eval_decorated_category_normalisation.py  test_eval_decorated_pii_extraction.py  test_eval_decorated_processable_entity_extraction.py  test_eval_decorated_query_characteristics_extraction.py  test_eval_decorated_query_security_validation.py  test_eval_decorated_unprocessable_entity_extraction.py  test_sentiment_analysis.py  (+1 more)
tests/: run_all_tests_with_metrics.py  test_processable_entity_extraction_agent.py  test_query_characteristics_extraction_agent.py  test_query_preprocessing_workflow.py  test_query_security_validation_agent.py  test_unprocessable_entity_extraction_agent.py  test_user_intent_validation_agent.py  test_workflow_orchestration.py
(+38 files in other folders)
